# shelter

./: .env.sample  .gitignore  Dockerfile  data.json  docker-compose.yaml  dump.rdb  pyproject.toml  readme.md  requirements.txt
config/: celery.py  settings.py
dogs/: forms.py  models.py  services.py  urls.py  views.py
dogs/migrations/: 0001_initial.py  0002_category.py  0003_alter_category_options_alter_dog_category.py  0004_parent.py  0005_dog_owner.py
dogs/templates/dogs/: base.html  dog_confirm_delete.html  dog_form.html  dog_list.html  index.html
dogs/templates/dogs/includes/: inc_category.html
dogs/templatetags/: my_tags.py
users/: models.py  services.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html
